[gd_scene load_steps=2 format=2]

[ext_resource path="res://client/ui/main_menu.gd" type="Script" id=1]

[node name="root" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="center" type="CenterContainer" parent="menu"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="col" type="HBoxContainer" parent="menu/center"]
margin_left = 475.0
margin_top = 70.0
margin_right = 549.0
margin_bottom = 530.0

[node name="row" type="VBoxContainer" parent="menu/center/col"]
margin_right = 74.0
margin_bottom = 460.0
rect_min_size = Vector2( 0, 460 )

[node name="title" type="Label" parent="menu/center/col/row"]
margin_right = 74.0
margin_bottom = 14.0
text = "Neonment"
align = 1
uppercase = true

[node name="center" type="CenterContainer" parent="menu/center/col/row"]
margin_top = 18.0
margin_right = 74.0
margin_bottom = 460.0
size_flags_vertical = 3

[node name="row" type="VBoxContainer" parent="menu/center/col/row/center"]
margin_left = 5.0
margin_top = 175.0
margin_right = 68.0
margin_bottom = 267.0

[node name="multi" type="Button" parent="menu/center/col/row/center/row"]
margin_right = 63.0
margin_bottom = 20.0
text = "Play"

[node name="settings" type="Button" parent="menu/center/col/row/center/row"]
margin_top = 24.0
margin_right = 63.0
margin_bottom = 44.0
text = "Settings"

[node name="credits" type="Button" parent="menu/center/col/row/center/row"]
margin_top = 48.0
margin_right = 63.0
margin_bottom = 68.0
text = "Credits"

[node name="quit" type="Button" parent="menu/center/col/row/center/row"]
margin_top = 72.0
margin_right = 63.0
margin_bottom = 92.0
text = "Quit"
[connection signal="pressed" from="menu/center/col/row/center/row/multi" to="." method="_on_multi_pressed"]
[connection signal="pressed" from="menu/center/col/row/center/row/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="menu/center/col/row/center/row/credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="menu/center/col/row/center/row/quit" to="." method="_on_quit_pressed"]
